--- a/config/settings.json
+++ b/config/settings.json
@@ -1,1 +1,6 @@
-
+{
+    "mongoConfig": {
+        "serverUrl": "mongodb://localhost:27017/",
+        "database": "CS546_Group12_FinalProject"
+    }
+}
