--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "ajax": "^0.0.4",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
+    "gridfs-stream": "^1.1.1",
     "handlebars": "^4.7.7",
     "mongodb": "^4.2.1",
     "multer": "^1.4.4"
